fixed issues related to integration module